# migres

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py  setup.y
.github/workflow/: test.yml
commands/: exclude.py  init.py  list.py  run.py  sort.py  test.py
config/: config.py  schema_parser.py  table_sorter.py
connector/: mariadb_connector.py
connectors/: mariadb_connector.py  postgres_connector.py
core/: __init__.py  data_processor.py  migrator.py
migres/: cli.py
models/: __init__.py  migration.py
utils/: env_loader.py
utils/__init__.py/: file.py
